--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aunties-babies",
   "version": "0.1.0",
+  "homepage": "https://tdavis0828.github.io/auntiesbabies",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -13,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
@@ -22,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
